# pishti

./: .gitignore  CMakeLists.txt
include/: Card.h  CardFactory.h  CardList.h  ComputerPlayer.h  ConsoleDisplay.h  Deck.h  DisplayStrategy.h  HumanPlayer.h  Manager.h  Pishti.h  PishtiEvent.h  PishtiObserver.h  Player.h
src/: Card.cpp  CardFactory.cpp  CardList.cpp  ComputerPlayer.cpp  ConsoleDisplay.cpp  Deck.cpp  HumanPlayer.cpp  Manager.cpp  Pishti.cpp  Player.cpp  main.cpp
